--- a/templates/exam/view_question.html
+++ b/templates/exam/view_question.html
@@ -19,13 +19,24 @@
     .row {
       margin: 100px;
     }
+      .container{
+  margin-top: 5%;
+}
+        .text-right, .total {
+  color:black
+}
+    .body-style{
+    background-color: #060b27;
+}
   </style>
 </head>
 <br><br>
+<body class="body-style">
+
 <div class="container">
   <div class="panel panel-primary">
     <div class="panel-heading">
-      <h6 class="panel-title">Questions</h6>
+      <h6 class="panel-title" style="color:white">Questions</h6>
     </div>
     <table class="table table-hover table-bordered" id="dev-table">
       <thead>
@@ -51,5 +62,6 @@
   </div>
 </div>
 
+</body>
 <br><br><br><br><br><br>
 {% endblock content %}
