--- a/templates/exam/admin_add_question.html
+++ b/templates/exam/admin_add_question.html
@@ -14,9 +14,61 @@
   a:link {
         text-decoration: none;
       }
-    
+        .body-style{
+      background-color: #060b27;
+    }
+    .auth-wrapper {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 5%;
+
+}
+
+.auth-div {
+  background-color: #e07db9;
+  text-align: center;
+  border-radius: 10px;
+  width: 70rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  box-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+}
+label{
+  float: left;
+}
+ .btn-first1 {
+  width: 100%;;
+    text-align: center;
+    padding: 0.65rem;
+    border-style: solid;
+    border-width: 1px;
+    border-color: transparent;
+    border-radius: 0.3rem;
+    background-color:black ;
+    transition-property: color, rgb(87, 111, 232);
+    transition-duration: 250ms, 250ms;
+    transition-timing-function: ease, cubic-bezier(0.645, 0.045, 0.355, 1);
+    color: white;
+    font-size: 1.5rem;
+    }
+    .btn-first1:hover{
+      border-color: none;
+    background-color: white;
+    color: black;
+    text-decoration: none;
+    font-weight: 500;
+    }
   </style>
 </head>
+<body class="body-style">
+    <div class="auth-wrapper">
+    <div class="auth-div">
 <h2 style="text-align:center;">Add Question</h2>
 <form method="POST" autocomplete="off" style="margin:100px;margin-top: 0px;">
     {%csrf_token%}
@@ -48,7 +100,10 @@
     </div>
     
 
-    <button type="submit" class="btn btn-success" style="border-radius:5px;">Submit Question</button>
+    <button type="submit" class="btn-first1" style="border-radius:5px;">Submit Question</button>
   </form>
+     </div>
+  </div>
+</body>
 <br><br><br>
 {% endblock content %}
