--- a/templates/exam/admin_question.html
+++ b/templates/exam/admin_question.html
@@ -22,11 +22,11 @@
       }
   
       .bg-c-blue {
-        background: #04868f;
+        background: #9ef4d9;
       }
   
       .bg-c-gtx {
-        background:#57717d;
+        background:#F56565;
       }
   
       .bg-c-yellow {
@@ -66,28 +66,36 @@
       left: 0px;
       right: 0px;
     }
+         .body-style{
+         background-color: #060b27;
+    }
+        .text-right, .total {
+  color:black
+}
     </style>
   </head>
 <br><br>
 
+<body class="body-style">
+  
   <div class="container">
     <div class="row">
-      <div class="col-md-4 col-xl-6">
+      <div class="col-md-4 col-xl-6 mt-5 rounded">
         <a href="admin-add-question" style="text-decoration: none;color:white;">
-        <div class="card bg-c-blue order-card">
+        <div class="card-effect card bg-c-blue order-card">
           <div class="card-block">
-            <h6 class="m-b-20"> Add Question </h6>
+            <h6 class="m-b-20 mb-5"> Add Question </h6>
             <h2 class="text-right"><i class="fas fa-plus f-left"></i></h2>
           </div>
         </div>
       </a>
       </div>
   
-      <div class="col-md-4 col-xl-6">
+      <div class="col-md-4 col-xl-6 mt-5 rounded">
         <a href="admin-view-question" style="text-decoration: none;color:white;">
-        <div class="card bg-c-gtx order-card">
+        <div class="card-effect card bg-c-gtx order-card">
           <div class="card-block">
-            <h6 class="m-b-20">View Questions</h6>
+            <h6 class="m-b-20 mb-5">View Questions</h6>
             <h2 class="text-right"><i class="fas fa-eye f-left"></i></h2>
           </div>
         </div>
@@ -105,5 +113,6 @@
 
 <script src="http://netdna.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js"></script>
 
+</body>
 
 {% endblock content %}
