--- a/templates/exam/admin_student.html
+++ b/templates/exam/admin_student.html
@@ -22,11 +22,11 @@
       }
   
       .bg-c-blue {
-        background: #04868f;
+        background: #9ef4d9;
       }
   
       .bg-c-gtx {
-        background:#57717d;
+        background:#F56565;
       }
   
       .bg-c-yellow {
@@ -66,17 +66,26 @@
       left: 0px;
       right: 0px;
     }
+        .body-style{
+    background-color: #060b27;
+}
+
+.card-effect:hover{
+  transform: translateY(-2.1rem);
+}
     </style>
   </head>
 <br><br>
 
+<body class="body-style">
+  
   <div class="container">
     <div class="row">
-      <div class="col-md-4 col-xl-6">
+      <div class="col-md-4 col-xl-6 mt-5 rounded">
         <a href="admin-view-student" style="text-decoration: none;color:white;">
-        <div class="card bg-c-blue order-card">
+        <div class="card-effect card bg-c-blue order-card">
           <div class="card-block">
-            <h6 class="m-b-20"> Total Registered Students </h6>
+            <h6 class="m-b-20 mb-5"> Total Registered Students </h6>
             <h2 class="text-right"><i class="fas fa-user-graduate f-left"></i><span>{{total_student}}</span></h2>
             
           </div>
@@ -84,11 +93,11 @@
       </a>
       </div>
   
-      <div class="col-md-4 col-xl-6">
+      <div class="col-md-4 col-xl-6 mt-5 rounded">
         <a href="admin-view-student-marks" style="text-decoration: none;color:white;">
-        <div class="card bg-c-gtx order-card">
+        <div class="card-effect card bg-c-gtx order-card">
           <div class="card-block">
-            <h6 class="m-b-20">Student Marks </h6>
+            <h6 class="m-b-20 mb-5">Student Marks </h6>
             <h2 class="text-right"><i class="fas fa-sort-numeric-up f-left"></i><span><i class="fas fa-eye"></i></span></h2>
           </div>
         </div>
@@ -106,5 +115,6 @@
 
 <script src="http://netdna.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js"></script>
 
+</body>
 
 {% endblock content %}
