--- a/templates/exam/admin_view_course.html
+++ b/templates/exam/admin_view_course.html
@@ -19,13 +19,23 @@
     .row {
       margin: 100px;
     }
+    .container{
+  margin-top: 5%;
+}
+        .text-right, .total {
+  color:black
+}
+    .body-style{
+    background-color: #060b27;
+}
   </style>
 </head>
-<br><br>
+<body class="body-style">
+  
 <div class="container">
   <div class="panel panel-primary">
     <div class="panel-heading">
-      <h6 class="panel-title">Courses</h6>
+      <h6 class="panel-title" style="color: white;">Courses</h6>
     </div>
     <table class="table table-hover table-bordered" id="dev-table">
       <thead>
@@ -44,12 +54,13 @@
         <td>{{t.question_number}}</td>
         <td>{{t.total_marks}}</td>
         
-        <td><a class="btn btn-danger btn-xs" style="border-radius: 0%;" href="{% url 'delete-course' t.id  %}"><span class="glyphicon glyphicon-trash"></span></a></td>
+        <td><a class="btn btn-danger btn-xs" style="border-radius: 0%; width: 30%;" href="{% url 'delete-course' t.id  %}"><span class="glyphicon glyphicon-trash"></span></a></td>
       </tr>
       {% endfor %}
     </table>
   </div>
 </div>
+</body>
 
 <br><br><br><br><br><br>
 {% endblock content %}
