--- a/templates/exam/admin_view_student.html
+++ b/templates/exam/admin_view_student.html
@@ -19,13 +19,22 @@
     .row {
       margin: 100px;
     }
+        .text-right, .total {
+  color:black
+}
+    .body-style{
+    background-color: #060b27;
+}
+.container{
+  margin-top: 5%;
+}
   </style>
 </head>
-<br><br>
+<body class="body-style">  
 <div class="container">
   <div class="panel panel-primary">
     <div class="panel-heading">
-      <h6 class="panel-title">Students</h6>
+      <h6 class="panel-title" style="color: white;">Students</h6>
     </div>
     <table class="table table-hover table-bordered" id="dev-table">
       <thead>
@@ -45,13 +54,14 @@
         <td>{{t.mobile}}</td>
         <td>{{t.address}}</td>
         
-        <td><a class="btn btn-success btn-xs" style="border-radius: 0%;" href="{% url 'update-student' t.id  %}"><span class="glyphicon glyphicon-edit"></span></a>
-        <a class="btn btn-danger btn-xs" style="border-radius: 0%;" href="{% url 'delete-student' t.id  %}"><span class="glyphicon glyphicon-trash"></span></a></td>
+        <td><a class="btn btn-success btn-xs" style="border-radius: 0%; width: 30%;" href="{% url 'update-student' t.id  %}"><span class="glyphicon glyphicon-edit"></span></a>
+        <a class="btn btn-danger btn-xs" style="border-radius: 0%; width: 30%;" href="{% url 'delete-student' t.id  %}"><span class="glyphicon glyphicon-trash"></span></a></td>
       </tr>
       {% endfor %}
     </table>
   </div>
 </div>
+</body>
 
 <br><br><br><br><br><br>
 {% endblock content %}
