--- a/templates/exam/admin_view_teacher_salary.html
+++ b/templates/exam/admin_view_teacher_salary.html
@@ -19,20 +19,29 @@
     .row {
       margin: 100px;
     }
+        .body-style{
+    background-color: #060b27;
+}
+
+.card-effect:hover{
+  transform: translateY(-2.1rem);
+}
   </style>
 </head>
 <br><br>
+<body class="body-style">
+  
 <div class="container">
   <div class="panel panel-primary">
     <div class="panel-heading">
-      <h6 class="panel-title">Teachers Salary</h6>
+      <h6 class="panel-title" style="color: white;">Teachers Salary</h6>
     </div>
     <table class="table table-hover table-bordered" id="dev-table">
       <thead>
         <tr>
 
           <th>Name</th>
-          <th>Photo</th>
+ 
           <th>Contact</th>
           <th>Salary</th>
          
@@ -43,7 +52,7 @@
       <tr>
 
         <td> {{t.get_name}}</td>
-        <td> <img src="{% static t.profile_pic.url %}" alt="Profile Pic" height="40px" width="40px" /></td>
+
         <td>{{t.mobile}}</td>
         <td>${{t.salary}}</td>
         </tr>
@@ -51,6 +60,8 @@
     </table>
   </div>
 </div>
+
+</body>
 
 <br><br><br><br><br><br>
 {% endblock content %}
