updated teacher admin and student features

--- a/templates/exam/admin_view_student_marks.html
+++ b/templates/exam/admin_view_student_marks.html
@@ -40,7 +40,7 @@
         <tr>
 
           <th>Name</th>
-          <th>Photo</th>
+          <!-- <th>Photo</th> -->
           
          
           <th>Action</th>
@@ -51,7 +51,7 @@
       <tr>
 
         <td> {{t.get_name}}</td>
-        <td> <img src="{% static t.profile_pic.url %}" alt="Profile Pic" height="40px" width="40px" /></td>
+        <!-- <td> <img src="{% static t.profile_pic.url %}" alt="Profile Pic" height="40px" width="40px" /></td> -->
         
         
         <td><a class="btn btn-primary btn-m" style="border-radius: 0%;" href="{% url 'admin-view-marks' t.id  %}"><span class="glyphicon glyphicon-eye-open"></span> View Marks</a></td>
