--- a/templates/exam/update_teacher.html
+++ b/templates/exam/update_teacher.html
@@ -27,7 +27,12 @@
   input[type=submit]:hover {
     background-color: #45a049;
   }
-
+    .body-style{
+    background-color: #060b27;
+}
+.container{
+  margin-top: 5%;
+}
 
   </style>
 
@@ -35,6 +40,8 @@
 </head>
 
 <br><br>
+<body class="body-style">
+  
 <h2 style="text-align:center;">Update Teacher</h2>
 <div>
   <form method="post"  autocomplete="off" enctype="multipart/form-data" style="margin-left:200px;margin-right:200px;">
@@ -60,6 +67,7 @@
 </div>
 
 
+</body>
 
 <br><br><br><br><br><br><br><br>
 {% endblock content %}
