--- a/templates/student/check_marks.html
+++ b/templates/student/check_marks.html
@@ -19,9 +19,14 @@
     .row {
       margin: 100px;
     }
+        .body-style{
+    background-color: #060b27;
+}
   </style>
 </head>
 <br><br>
+<body class="body-style">
+  
 <div class="container">
   <div class="panel panel-primary">
     <div class="panel-heading">
@@ -52,5 +57,5 @@
   </div>
 </div>
 
-<br><br><br><br><br><br>
-{% endblock content %}
+</body>
+<!-- {% endblock content %} -->
