--- a/templates/exam/admin_view_teacher.html
+++ b/templates/exam/admin_view_teacher.html
@@ -41,6 +41,7 @@
       <thead>
         <tr>
           <th>Name</th>
+          <!-- <th>Photo</th> -->
           <th>Contact</th>
           <th>Address</th>
          
@@ -51,7 +52,7 @@
       <tr>
 
         <td> {{t.get_name}}</td>
-        <td> <img src="{% static t.profile_pic.url %}" alt="Profile Pic" height="40px" width="40px" /></td>
+        <!-- <td> <img src="{% static t.profile_pic.url %}" alt="Profile Pic" height="40px" width="40px" /></td> -->
         <td>{{t.mobile}}</td>
         <td>{{t.address}}</td>
         
