--- a/templates/exam/salary_form.html
+++ b/templates/exam/salary_form.html
@@ -14,11 +14,65 @@
   a:link {
         text-decoration: none;
       }
-    
+       .body-style{
+         background-color: #060b27;
+    }
+.auth-wrapper {
+  height: 80%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  left: 30%;
+}
+.auth-div {
+  background-color: #9ef4d9;
+  text-align: center;
+  border-radius: 10px;
+  width: 50rem;
+  height: auto;
+  display: flex;
+  padding-top: 6%;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  box-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+}
+ .btn-first1 {
+   width: 100%;;
+    text-align: center;
+    padding: 0.7rem;
+    border-style: solid;
+    border-width: 1px;
+    border-color: transparent;
+    border-radius: 0.3rem;
+    background-color:black ;
+    transition-property: color, rgb(87, 111, 232);
+    transition-duration: 250ms, 250ms;
+    transition-timing-function: ease, cubic-bezier(0.645, 0.045, 0.355, 1);
+    color: white;
+    font-size: 1rem;
+    }
+    .btn-first1:hover{
+      border-color: none;
+    background-color: white;
+    color: black;
+    text-decoration: none;
+    font-weight: 500;
+    }
+    label{
+      float: left;
+    }
   </style>
 </head>
-<h3 style="text-align:center">Please Enter Salary Amount:</h3>
-<form method="POST" autocomplete="off" style="margin:100px;margin-top: 0px;">
+
+<body class="body-style">
+  <div class="auth-wrapper">
+    <div class="auth-div">
+      
+      <h2 style="text-align:center">Please Enter Salary Amount:</h2>
+      <form method="POST" autocomplete="off" style="margin:100px;margin-top: 0px;">
     {%csrf_token%}
     <div class="form-group">
       <label for="salary">Salary (per month)</label>
@@ -26,7 +80,11 @@
     </div>
     
 
-    <button type="submit" class="btn btn-success" style="border-radius: 5px;">Approve</button>
+    <button type="submit" class="btn-first1" style="border-radius: 5px;">Approve</button>
   </form>
 <br><br><br>
 {% endblock content %}
+    </div>
+  </div>
+
+</body>
