--- a/templates/exam/update_student.html
+++ b/templates/exam/update_student.html
@@ -3,38 +3,99 @@
 {% block content %}
 <head>
   <style media="screen">
-    input[type=text], select,input[type=number] ,input[type=password], textarea{
-    width: 100%;
-    padding: 12px 20px;
-    margin: 8px 0;
-    display: inline-block;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    box-sizing: border-box;
-  }
+    
+.auth-wrapper {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
-  input[type=submit] {
-    width: 100%;
-    background-color: #4CAF50;
+.auth-div {
+  background-color: #9ef4d9;
+  text-align: center;
+  padding: 3rem 5rem;
+  border-radius: 10px;
+  width: 40rem;
+  height: 32rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  box-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+}
+ .btn-first1 {
+   width: 80%;
+    margin-left: 8%;
+    text-align: center;
+    padding: 0.35rem;
+    border-style: solid;
+    border-width: 1px;
+    border-color: transparent;
+    border-radius: 0.3rem;
+    background-color:black ;
+    transition-property: color, rgb(87, 111, 232);
+    transition-duration: 250ms, 250ms;
+    transition-timing-function: ease, cubic-bezier(0.645, 0.045, 0.355, 1);
     color: white;
-    padding: 14px 20px;
-    margin: 8px 0;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-  }
+    font-size: 1rem;
+    }
+    .btn-first1:hover{
+      border-color: none;
+    background-color: white;
+    color: black;
+    text-decoration: none;
+    font-weight: 500;
+    }
 
-  input[type=submit]:hover {
-    background-color: #45a049;
-  }
+    input[type="text"],input[type="password"] {
+      width: 100%;
+    border-style: solid;
+    border-width: 2px;
+    border-color:#121212;
+    border-radius: 5px;  
+}
 
 
+input[type="text"],input[type="password"] {
+    margin-top:4px;
+    border-style: solid;
+    border-width: 3px;
+    border-color:rgb(87, 111, 232);
+    border-radius: 5px;
+   padding: 0.6rem;
+    
+}
+input[type="text"]:focus,input[type="password"]:focus{
+  transition-property: 0 8px 50px 0 rgba(0,0,0,0.5), border;
+  transition-duration: 300ms, 300ms;
+  transition-timing-function: ease, ease;
+}
+
+input[type="text"]:hover,input[type="password"]:hover{
+    width: 
+}
+input[type="submit"] {
+  width: 100%;
+  padding: 8px 12px;
+  margin: 1rem 0;
+}
+
+form{
+    width: 20rem;
+}
   </style>
 
 
 </head>
 
 <br><br>
+<body class="body-style">
+  <div class="auth-wrapper">
+<div class="auth-div">
+
 <h2 style="text-align:center;">Update Student</h2>
 <div>
   <form method="post" autocomplete="off" enctype="multipart/form-data" style="margin-left:200px;margin-right:200px;">
@@ -54,12 +115,14 @@
         {% render_field userForm.password class="form-control" placeholder="Password" %} <br><br>
         <label for="profile_pic">Profile Picture</label>
           {% render_field studentForm.profile_pic class="form-control" placeholder="Profile Picture" %}
-<br><br>
-    <input type="submit" value="Update" style="border-radius:5px;">
+    <input type="submit" class="btn-first1" value="Update" style="border-radius:5px;">
   </form>
 </div>
+</div>
+  </div>
 
 
+</body>
 
 <br><br><br><br><br><br><br><br>
 {% endblock content %}
