--- a/templates/student/view_result.html
+++ b/templates/student/view_result.html
@@ -19,9 +19,13 @@
     .row {
       margin: 100px;
     }
+            .body-style{
+    background-color: #060b27;
+}
   </style>
 </head>
 <br><br>
+<body class="body-style">
 <div class="container">
   <div class="panel panel-primary">
     <div class="panel-heading">
@@ -47,6 +51,5 @@
     </table>
   </div>
 </div>
-
-<br><br><br><br><br><br>
-{% endblock content %}
+</body>
+<!-- {% endblock content %} -->
