--- a/templates/teacher/see_question.html
+++ b/templates/teacher/see_question.html
@@ -19,13 +19,17 @@
     .row {
       margin: 100px;
     }
+    .body-style{
+  background-color: #060b27;
+}
   </style>
 </head>
 <br><br>
+<body class="body-style">
 <div class="container">
   <div class="panel panel-primary">
     <div class="panel-heading">
-      <h6 class="panel-title">Available Questions</h6>
+      <h6 class="panel-title" style="color: white;">Available Questions</h6>
     </div>
     <table class="table table-hover table-bordered" id="dev-table">
       <thead>
@@ -50,6 +54,5 @@
     </table>
   </div>
 </div>
-
-<br><br><br><br><br><br>
-{% endblock content %}
+</body>
+<!-- {% endblock content %} -->
